# comp-planning-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: app.py
dashboard/templates/: index.html
mcp_server/: server.py
mcp_server/db/: models.py
scripts/: seed_data.py
slack_agent/: app.py  blocks.py  mcp_client.py
tests/: test_comp_math.py
